--- a/src/ScoreTable.css
+++ b/src/ScoreTable.css
@@ -17,3 +17,29 @@
   vertical-align: top;
   width: 100%;
 }
+
+.Game-button-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.Game-reroll {
+  font-size: 2em;
+  color: white;
+  font-weight: 100;
+  transition: 0.5s;
+  background-size: 200% auto;
+  box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.1);
+  background-image: linear-gradient(
+    to right,
+    #91eae4 0%,
+    #7f7fd5 51%,
+    #91eae4 100%
+  );
+  border-radius: 0.5rem;
+  border: none;
+  width: 50%;
+
+  margin-bottom: 2rem;
+}
