--- a/src/index.css
+++ b/src/index.css
@@ -4,5 +4,5 @@ body {
   font-family: "Roboto";
   font-weight: 100;
   height: 100vh;
-  background: linear-gradient(to right, #91eae4, #86a8e7, #7f7fd5);
+  background: #282c34;
 }
