--- a/src/Game.css
+++ b/src/Game.css
@@ -7,6 +7,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  border-radius: 14px;
 }
 h2 {
   font-weight: 100;
@@ -75,6 +76,7 @@ h2 {
   -webkit-animation: Gradient 15s ease infinite;
   -moz-animation: Gradient 15s ease infinite;
   animation: Gradient 15s ease infinite;
+  border-radius: 12px 12px 0 0;
 }
 
 @keyframes Gradient {
