--- a/src/ScoreTable.css
+++ b/src/ScoreTable.css
@@ -39,7 +39,7 @@
   );
   border-radius: 0.5rem;
   border: none;
-  width: 50%;
+  /* width: 50%; */
 
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
 }
