--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,7 @@
 body {
-  margin: 0;
   padding: 0;
   font-family: "Roboto";
   font-weight: 100;
-  height: 100vh;
+  height: 100%;
   background: #282c34;
 }
